speficy endpoint tag & generate import to postman
