# swagger-output.json
@@ -5,7 +5,7 @@
     "title": "My API",
     "description": "Documentation automatically generated by the <b>swagger-autogen</b> module."
   },
-  "host": "localhost:3000",
+  "host": "localhost:4000",
   "basePath": "/",
   "schemes": [
     "http"
@@ -104,25 +104,24 @@
         }
       },
       "post": {
-        "description": "",
+        "tags": [
+          "Hotels"
+        ],
+        "description": "Creates a new hotel.",
         "parameters": [
           {
             "name": "body",
             "in": "body",
             "schema": {
-              "type": "object",
-              "properties": {
-                "Name": {
-                  "example": "any"
-                },
-                "Location": {
-                  "example": "any"
-                }
-              }
+              "$ref": "#/definitions/Hotel"
             }
           }
         ],
-        "responses": {}
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       },
       "delete": {
         "description": "",
@@ -291,6 +290,25 @@
         ],
         "responses": {}
       }
+    }
+  },
+  "definitions": {
+    "Hotel": {
+      "type": "object",
+      "properties": {
+        "Name": {
+          "type": "string",
+          "example": "Street Hotel"
+        },
+        "Location": {
+          "type": "string",
+          "example": "Chicago"
+        }
+      },
+      "required": [
+        "Name",
+        "Location"
+      ]
     }
   }
 }
